--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -644,9 +644,30 @@ print (result2)</pre>
 <h3>函式參數</h3>
 <p>參數(parameter)用來傳遞資料進入函式。</p>
 <p>1.參數傳遞方式</p>
-<p>    (1)傳值呼叫</p>
-<p>    (2)</p>
-<p>    (3)</p>
+<p>    (1)傳值呼叫:當參數屬於不可改變內容的物件，如數值、字串、tuple(序對)，就會採取傳值呼叫。</p>
+<p>    (2)傳址呼叫:<span>當參數屬於可改變內容的物件，如list(串列)、set(集合)、dict(字典)，就會採取傳址呼叫，傳遞給函式的為參數位址，而非參數值。</span></p>
+<p>2.關鍵字引數</p>
+<p>    Python內預設採取位置引數，函式呼叫中的引數順序需對應函式定義中的參數順序，如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#定義函式trapezoidArea
+
+def trapezoidArea(top,bottom,height)
+
+#呼叫時應該寫為
+
+trapezoidArea(10,20,5)
+
+#此時的
+#10為top(上底)
+#20為bottom(下底)
+#5為height(高)</pre>
+<p>3.預設引數值</p>
+<p>可以在定義函式時設定預設引數值，當呼叫時沒有提供某個引數時，將採用預先設定好的預設引數值，如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def myName(name,gender = "男"):
+        print("我的名字是",name,"，性別",gender,"。")
+
+myName("Simon")
+#輸出為
+我的名字是Simon，性別男。</pre>
 <p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
