--- a/content/Day21(0205).html
+++ b/content/Day21(0205).html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子<br /><h1>重複運算子</h1>
-<p>1.*運算子可以用來重複字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
-'wow!wow!wow!wow!wow!'</pre>
-<br />連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子</div>
+    <div id="tipue_search_content">函式參數 << <a href='函式參數.html'>Previous</a> <a href='函式的傳回值.html'>Next</a> >> 函式的傳回值<br /><h1>Day21(0205)</h1>
+<br />函式參數 << <a href='函式參數.html'>Previous</a> <a href='函式的傳回值.html'>Next</a> >> 函式的傳回值</div>
         
     <!-- footer -->
       <div class="container">
