--- a/content/全域變數與區域變數.html
+++ b/content/全域變數與區域變數.html
@@ -133,11 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子<br /><h1>重複運算子</h1>
-<p>1.*運算子可以用來重複字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
-'wow!wow!wow!wow!wow!'</pre>
-<br />連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子</div>
+    <div id="tipue_search_content">函式的傳回值 << <a href='函式的傳回值.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考<br /><h1>全域變數與區域變數</h1>
+<p>變數的有效範圍(scope)，這指的是程式的哪些敘述皆能存取變數的值，大部分的變數都只有一種有效範圍，就是程式所有敘述皆可存取的變數之值，稱為全域變數(global variable)，但在函式內定義的變數則稱為區域變數(local variable)，只有函式內的敘述能夠存取區域變數的值。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def f1()
+        x = 1
+        print(x)
+
+f1()</pre>
+<p></p>
+<br />函式的傳回值 << <a href='函式的傳回值.html'>Previous</a> <a href='資料參考.html'>Next</a> >> 資料參考</div>
         
     <!-- footer -->
       <div class="container">
