--- a/content/函式的傳回值.html
+++ b/content/函式的傳回值.html
@@ -133,11 +133,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子<br /><h1>重複運算子</h1>
-<p>1.*運算子可以用來重複字串，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;5 * "wow!"
-'wow!wow!wow!wow!wow!'</pre>
-<br />連接運算子 << <a href='連接運算子.html'>Previous</a> <a href='in ,not in運算子.html'>Next</a> >> in ,not in運算子</div>
+    <div id="tipue_search_content">Day21(0205) << <a href='Day21(0205).html'>Previous</a> <a href='全域變數與區域變數.html'>Next</a> >> 全域變數與區域變數<br /><h1>函式的傳回值</h1>
+<p>在def區塊內的敘述執行完畢之前，程式控制權都不會離開函式，若我們可能需要提早離開函式，返回呼叫函式的地方，此時可以使用return敘述或在return後加上傳回值，如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def divmod(a,b)
+        div = a//b
+        mod = a%b
+        return div,mod
+
+x,y = divmod(300,3)
+print("300除以3的商數為",x,"，餘數為",y,"。")
+
+#得到以下結果
+#300除以3的商數為100，餘數為0。</pre>
+<br />Day21(0205) << <a href='Day21(0205).html'>Previous</a> <a href='全域變數與區域變數.html'>Next</a> >> 全域變數與區域變數</div>
         
     <!-- footer -->
       <div class="container">
