Day22(0206) progress update

--- a/content/W4.html
+++ b/content/W4.html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入<br /><h1>Day8(0123)</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入</div>
+    <div id="tipue_search_content">全域變數與區域變數 << <a href='全域變數與區域變數.html'>Previous</a> <a href='Day22(0206).html'>Next</a> >> Day22(0206)<br /><h1>W4</h1>
+<br />全域變數與區域變數 << <a href='全域變數與區域變數.html'>Previous</a> <a href='Day22(0206).html'>Next</a> >> Day22(0206)</div>
         
     <!-- footer -->
       <div class="container">
