--- a/content/lambda 運算式.html
+++ b/content/lambda 運算式.html
@@ -133,8 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入<br /><h1>Day8(0123)</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入</div>
+    <div id="tipue_search_content">遞迴函式 << <a href='遞迴函式.html'>Previous</a> <a href='日期時間函式(1).html'>Next</a> >> 日期時間函式(1)<br /><h1>lambda 運算式</h1>
+<p>lambda關鍵字可以用來建立較小的匿名函式，它指的即是沒有名稱的函式，語法如下，arg1,arg2,...的後面須加上括號:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">lambda arg1,arg2,...:expression</pre>
+<p>expression相當於函式定義主體，可在expression中使用arg1,arg2...這些參數，如下為將lambda運算是產生的匿名函式指派給變數<span>mul</span>，此匿名函數將傳回參數x,y相乘的結果:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;mul = lambda x,y:x * y
+&gt;&gt;&gt;print(add(50,100))
+5000</pre>
+<br />遞迴函式 << <a href='遞迴函式.html'>Previous</a> <a href='日期時間函式(1).html'>Next</a> >> 日期時間函式(1)</div>
         
     <!-- footer -->
       <div class="container">
