--- a/content/遞迴函式.html
+++ b/content/遞迴函式.html
@@ -133,8 +133,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入<br /><h1>Day8(0123)</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入</div>
+    <div id="tipue_search_content">Day22(0206) << <a href='Day22(0206).html'>Previous</a> <a href='lambda 運算式.html'>Next</a> >> lambda 運算式<br /><h1>遞迴函式</h1>
+<p>遞迴函式為可以呼叫自己本身的函式，若函式f1()呼叫函式f2()，而函式f2()又在某種情況下呼叫f1()，此情況函式f1()也可算是一個遞迴程式。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">result = 1
+
+for i in range(1,7):
+        result = result * i
+
+
+print("5! =",result)</pre>
+<br />Day22(0206) << <a href='Day22(0206).html'>Previous</a> <a href='lambda 運算式.html'>Next</a> >> lambda 運算式</div>
         
     <!-- footer -->
       <div class="container">
