--- a/config/content.htm
+++ b/config/content.htm
@@ -688,6 +688,33 @@ print("300除以3的商數為",x,"，餘數為",y,"。")
         print(x)
 
 f1()</pre>
+<h1>W4</h1>
+<h2>Day22(0206)</h2>
+<h3>遞迴函式</h3>
+<p>遞迴函式為可以呼叫自己本身的函式，若函式f1()呼叫函式f2()，而函式f2()又在某種情況下呼叫f1()，此情況函式f1()也可算是一個遞迴程式。例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">result = 1
+
+for i in range(1,7):
+        result = result * i
+
+
+print("5! =",result)</pre>
+<h3>lambda 運算式</h3>
+<p>lambda關鍵字可以用來建立較小的匿名函式，它指的即是沒有名稱的函式，語法如下，arg1,arg2,...的後面須加上括號:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">lambda arg1,arg2,...:expression</pre>
+<p>expression相當於函式定義主體，可在expression中使用arg1,arg2...這些參數，如下為將lambda運算是產生的匿名函式指派給變數<span>mul</span>，此匿名函數將傳回參數x,y相乘的結果:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;mul = lambda x,y:x * y
+&gt;&gt;&gt;print(add(50,100))
+5000</pre>
+<h3>日期時間函式(1)</h3>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#導入time模組
+&gt;&gt;&gt;import time</pre>
+<p>1.time.daylight:此屬性表示本地時間是否使用日光節約時間，1表示是，0表示否，以台灣為例，值為0。</p>
+<p>2.time.timezone:<span>此屬性表示本地時間與UTC時間相差多少秒。</span></p>
+<p>3.time.altzone:<span>此屬性表示本地時間與UTC日光節約時間相差多少秒。</span></p>
+<p>4.time.time():傳回從1970年1月1日上午12時00分到目前的UTC時間總共經過多少秒，Python示已tick作為時間計數單位，1 tick等於1微秒(10^-6秒)。</p>
+<p>5.time.clock():第一次呼叫會傳回此函式的執行時間，第二次呼叫會傳回這一次和上一次呼叫此函數相差多少秒。</p>
+<p>6.time.gmtime:(secs):傳回從<span>1970年1月1日上午12時00分經過time.time()或選擇性參數secs所指定之秒數的時間，即目前的UTC時間。</span></p>
 <p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
