--- a/content/Day22(0206).html
+++ b/content/Day22(0206).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入<br /><h1>Day8(0123)</h1>
-<br />W2 << <a href='W2.html'>Previous</a> <a href='輸入.html'>Next</a> >> 輸入</div>
+    <div id="tipue_search_content">W4 << <a href='W4.html'>Previous</a> <a href='遞迴函式.html'>Next</a> >> 遞迴函式<br /><h1>Day22(0206)</h1>
+<br />W4 << <a href='W4.html'>Previous</a> <a href='遞迴函式.html'>Next</a> >> 遞迴函式</div>
         
     <!-- footer -->
       <div class="container">
