Day23(0207) progress update

--- a/content/Day23(0207).html
+++ b/content/Day23(0207).html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day10(0125) << <a href='Day10(0125).html'>Previous</a> <a href='常用數學函式.html'>Next</a> >> 常用數學函式<br /><h1>導入數學模組</h1>
-<p>在Python中若需使用數學函式，需先導入數學模組(module)，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import math</pre>
-<br />Day10(0125) << <a href='Day10(0125).html'>Previous</a> <a href='常用數學函式.html'>Next</a> >> 常用數學函式</div>
+    <div id="tipue_search_content">日期時間函式(1) << <a href='日期時間函式(1).html'>Previous</a> <a href='日期時間函式(2).html'>Next</a> >> 日期時間函式(2)<br /><h1>Day23(0207)</h1>
+<br />日期時間函式(1) << <a href='日期時間函式(1).html'>Previous</a> <a href='日期時間函式(2).html'>Next</a> >> 日期時間函式(2)</div>
         
     <!-- footer -->
       <div class="container">
