--- a/content/日期時間函式(2).html
+++ b/content/日期時間函式(2).html
@@ -133,10 +133,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day10(0125) << <a href='Day10(0125).html'>Previous</a> <a href='常用數學函式.html'>Next</a> >> 常用數學函式<br /><h1>導入數學模組</h1>
-<p>在Python中若需使用數學函式，需先導入數學模組(module)，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import math</pre>
-<br />Day10(0125) << <a href='Day10(0125).html'>Previous</a> <a href='常用數學函式.html'>Next</a> >> 常用數學函式</div>
+    <div id="tipue_search_content">Day23(0207) << <a href='Day23(0207).html'>Previous</a> <a href='calendar模組.html'>Next</a> >> calendar模組<br /><h1>日期時間函式(2)</h1>
+<p>7.time.localtime(secs):與<span>time.gmtime相似，但傳回的是目前的本地時間。</span></p>
+<p>8.<span>time.asctime(t):以str型別傳回目前的本地時間或選擇性參數t指定的時間。</span></p>
+<p>9.<span>time.ctime(secs):與time.asctime，但選擇性參數secs是從1970年1月1日上午12時00分所經過的秒數。</span></p>
+<p>10.<span>time.mktime(t):傳回從1970年1月1日上午12時00分到參數t指定的時間所經過的秒數。</span></p>
+<p>11.time.sleep(secs):另Python暫停參數secs所指定的秒數。</p>
+<p>12.time.strftime(format,t):根據參數format所指定的格式，將time.gmtime()或time.localtime()函式傳回目前的時間，轉換為字串。</p>
+<br />Day23(0207) << <a href='Day23(0207).html'>Previous</a> <a href='calendar模組.html'>Next</a> >> calendar模組</div>
         
     <!-- footer -->
       <div class="container">
