--- a/content/日期時間函式(一).html
+++ b/content/日期時間函式(一).html
@@ -133,8 +133,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">全域變數與區域變數 << <a href='全域變數與區域變數.html'>Previous</a> <a href='Day22(0206).html'>Next</a> >> Day22(0206)<br /><h1>W4</h1>
-<br />全域變數與區域變數 << <a href='全域變數與區域變數.html'>Previous</a> <a href='Day22(0206).html'>Next</a> >> Day22(0206)</div>
+    <div id="tipue_search_content">lambda 運算式 << <a href='lambda 運算式.html'>Previous</a> <a href='Day23(0207).html'>Next</a> >> Day23(0207)<br /><h1>日期時間函式(一)</h1>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#導入time模組
+&gt;&gt;&gt;import time</pre>
+<p>1.time.daylight:此屬性表示本地時間是否使用日光節約時間，1表示是，0表示否，以台灣為例，值為0。</p>
+<p>2.time.timezone:<span>此屬性表示本地時間與UTC時間相差多少秒。</span></p>
+<p>3.time.altzone:<span>此屬性表示本地時間與UTC日光節約時間相差多少秒。</span></p>
+<p>4.time.time():傳回從1970年1月1日上午12時00分到目前的UTC時間總共經過多少秒，Python示已tick作為時間計數單位，1 tick等於1微秒(10^-6秒)。</p>
+<p>5.time.clock():第一次呼叫會傳回此函式的執行時間，第二次呼叫會傳回這一次和上一次呼叫此函數相差多少秒。</p>
+<p>6.time.gmtime:(secs):傳回從<span>1970年1月1日上午12時00分經過time.time()或選擇性參數secs所指定之秒數的時間，即目前的UTC時間。</span></p>
+<br />lambda 運算式 << <a href='lambda 運算式.html'>Previous</a> <a href='Day23(0207).html'>Next</a> >> Day23(0207)</div>
         
     <!-- footer -->
       <div class="container">
