--- a/content/Day25(0209).html
+++ b/content/Day25(0209).html
@@ -133,19 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day9(0124) << <a href='Day9(0124).html'>Previous</a> <a href='Day10(0125).html'>Next</a> >> Day10(0125)<br /><h1>常用內建數值函數</h1>
-<p>abs(X):傳回X的絕對值。</p>
-<p>min(X1,X2,X3,......)<span>:傳回參數數值中的最小值。</span></p>
-<p>max(<span>X1,X2,X3,......</span>)<span>:傳回參數數值中的最大值。</span></p>
-<p>hex(<span>X</span>)<span>:傳回整數X參數由十進位轉為十六進位的字串，前面會加上0x。</span></p>
-<p>oct(<span>X</span>)<span>:傳回整數X參數由十進位轉為八進位的字串，前面會加上0o。</span></p>
-<p>bin(<span>X</span>)<span>:傳回整數X參數由十進位轉為二進位的字串<span>，前面會加上0b。</span></span></p>
-<p>int(<span>X</span>)<span>:傳回X的整數部分，小數將被直接捨去。</span></p>
-<p>round(<span>X,precision</span>)<span>:傳回與X最接近的整數(四捨五入)，若要設定精確度到小數點後幾位，可利用選擇性參數precision設定。</span></p>
-<p>pow(<span>X,Y</span>)<span>:傳回X的Y次方值。</span></p>
-<p>float("<span>X</span>)<span>:傳回字串X轉換成浮點數的結果。</span></p>
-<p>complex(<span>X</span>)<span>:傳回字串X轉換成複數的結果。</span></p>
-<br />Day9(0124) << <a href='Day9(0124).html'>Previous</a> <a href='Day10(0125).html'>Next</a> >> Day10(0125)</div>
+    <div id="tipue_search_content">list串列(一) << <a href='list串列(一).html'>Previous</a> <a href='list串列(二).html'>Next</a> >> list串列(二)<br /><h1>Day25(0209)</h1>
+<br />list串列(一) << <a href='list串列(一).html'>Previous</a> <a href='list串列(二).html'>Next</a> >> list串列(二)</div>
         
     <!-- footer -->
       <div class="container">
