--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -706,7 +706,7 @@ print("5! =",result)</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;mul = lambda x,y:x * y
 &gt;&gt;&gt;print(add(50,100))
 5000</pre>
-<h3>日期時間函式(1)</h3>
+<h3>日期時間函式(一)</h3>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">#導入time模組
 &gt;&gt;&gt;import time</pre>
 <p>1.time.daylight:此屬性表示本地時間是否使用日光節約時間，1表示是，0表示否，以台灣為例，值為0。</p>
@@ -716,7 +716,7 @@ print("5! =",result)</pre>
 <p>5.time.clock():第一次呼叫會傳回此函式的執行時間，第二次呼叫會傳回這一次和上一次呼叫此函數相差多少秒。</p>
 <p>6.time.gmtime:(secs):傳回從<span>1970年1月1日上午12時00分經過time.time()或選擇性參數secs所指定之秒數的時間，即目前的UTC時間。</span></p>
 <h2>Day23(0207)</h2>
-<h3>日期時間函式(2)</h3>
+<h3>日期時間函式(二)</h3>
 <p>7.time.localtime(secs):與<span>time.gmtime相似，但傳回的是目前的本地時間。</span></p>
 <p>8.<span>time.asctime(t):以str型別傳回目前的本地時間或選擇性參數t指定的時間。</span></p>
 <p>9.<span>time.ctime(secs):與time.asctime，但選擇性參數secs是從1970年1月1日上午12時00分所經過的秒數。</span></p>
@@ -738,7 +738,7 @@ print("5! =",result)</pre>
 <p>6.<span>calendar.calendar(year):傳回參數year所指定之年份月曆。</span></p>
 <p><span>7.calendar.month(year,month):傳回參數year和參數month所指定之年份與月份的日曆。</span></p>
 <h2>Day24(0208)</h2>
-<h3>list(串列)</h3>
+<h3>list串列(一)</h3>
 <p>list串列是由一連串資料所組成、有順序且可改變內容(mutable)的序列(sequence)，前後以中括號標示，串列中的資料以逗號分開。</p>
 <p>建立串列:可以使用Python內建的list()函式建立串列，例如:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;list1 = list()
