--- a/content/Day26(0210).html
+++ b/content/Day26(0210).html
@@ -133,21 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='Day9(0124).html'>Next</a> >> Day9(0124)<br /><h1>輸入</h1>
-<p><span>使用內建的input()函式取得輸入的資料</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;userNumber = input("請輸入學號:")
-請輸入學號: 40823131
-##上列按下enter後將會跳回
-&gt;&gt;&gt;</pre>
-<p><span>之後檢驗</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;userNumber
-##按下enter後則出現
-'40823131'
-&gt;&gt;&gt;</pre>
-<p><span></span>得到上列字串後，若需進行計算則需使用內建的eval()將字串轉換為數值。</p>
-<p>使用上述函式寫出利用輸入半徑，用來計算圓面積的程式，如下。</p>
-<p><a href="https://drive.google.com/file/d/1CqWMW5cUgcQtZOCpCD51S5JBJLnVHr52/view?usp=sharing" title="CircleArea.py">CircleArea.py</a></p>
-<br />Day8(0123) << <a href='Day8(0123).html'>Previous</a> <a href='Day9(0124).html'>Next</a> >> Day9(0124)</div>
+    <div id="tipue_search_content">list串列(二) << <a href='list串列(二).html'>Previous</a> <a href='list串列(三).html'>Next</a> >> list串列(三)<br /><h1>Day26(0210)</h1>
+<br />list串列(二) << <a href='list串列(二).html'>Previous</a> <a href='list串列(三).html'>Next</a> >> list串列(三)</div>
         
     <!-- footer -->
       <div class="container">
