Day27(0211) progress update

--- a/content/Day27(0211).html
+++ b/content/Day27(0211).html
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起<br /><h1>Day1(0116)</h1>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='Python源起.html'>Next</a> >> Python源起</div>
+    <div id="tipue_search_content">list串列(三) << <a href='list串列(三).html'>Previous</a> <a href='tuple序對.html'>Next</a> >> tuple序對<br /><h1>Day27(0211)</h1>
+<br />list串列(三) << <a href='list串列(三).html'>Previous</a> <a href='tuple序對.html'>Next</a> >> tuple序對</div>
         
     <!-- footer -->
       <div class="container">
