--- a/config/content.htm
+++ b/config/content.htm
@@ -763,8 +763,8 @@ print("5! =",result)</pre>
 <p>    4.sum(L):傳回串列參數L中元素的總和。</p>
 <p>連接運算子</p>
 <p>    1.+運算子可以用來連接串列，例如:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;[1,2,3]+["Taiwan","Japan","korea"]
-[1,2,3,'taiwan','Japan','korea']</pre>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;[1,2,3]+["Taiwan","Japan","Korea"]
+[1,2,3,'Taiwan','Japan','Korea']</pre>
 <p>重複運算子</p>
 <p>    1.*運算子也可以用來重複串列，例如:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;3*[1,2,3]
@@ -780,10 +780,10 @@ False
 </pre>
 <p>in &amp; not in運算子</p>
 <p>    1.in運算子:用來檢查某個元素是否存在於串列中，例如:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"taiwan" in [1,"taiwan",2]
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"Taiwan" in [1,"Taiwan",2]
 True</pre>
 <p>    2.not <span>in運算子:用來檢查某個元素是否不</span><span>存在於串列中，例如:</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"thailand" not in [1,taiwan,2]
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"Thailand" not in [1,Taiwan,2]
 True</pre>
 <p>索引 &amp; 片段運算子</p>
 <p>    1.索引運算子[]:用於取得串列中的元素，舉例來說，假設變數L值為[1,2,3,4,5]，索引0表示由左端開始，索引-1則由右端開始索引，例如:</p>
@@ -816,7 +816,7 @@ True</pre>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;list1 = [i for i in range(10) if i &lt; 8]
 &gt;&gt;&gt;list1
 [0,1,2,3,4,5,6,7]</pre>
-<p>del敘述</p>
+<p><strong>del敘述</strong></p>
 <p>del敘述可用來從串列中刪除指定索引之元素，例如:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;L = [1,2,3,4,5,6,7]
 &gt;&gt;&gt;del L[0]
@@ -830,7 +830,7 @@ Traceback (most recent call last):
   File "&lt;pyshell#3&gt;", line 1, in &lt;module&gt;
     L
 NameError: name 'L' is not defined</pre>
-<p>二維串列</p>
+<p><strong>二維串列</strong></p>
 <p>二維串列其實就是巢狀串列，串列中的元素也是串列，以下列成績表格為例:</p>
 <table height="84" width="401">
 <tbody>
@@ -898,5 +898,59 @@ NameError: name 'L' is not defined</pre>
 [90,80,60]
 &gt;&gt;&gt;grades[0][0]
 90</pre>
+<h2><span>Day27(0211)</span></h2>
+<h3><span>tuple序對</span></h3>
+<p>tuple序對是由一連串資料所組成、不可改變內容(immutable)且有順序的序列(sequence)。序對中的資料以逗號隔開，前後已中括號標示，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;(1,"Taiwan",2,"Japan")
+(1,'Taiwan',2,'Japan')</pre>
+<p><strong>建立序對</strong></p>
+<p>利用Python內建的tuple()函式來建立序對，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;tuple1 = tuple()
+&gt;&gt;&gt;tuple1
+()
+&gt;&gt;&gt;tuple2 = tuple((1,2,3))
+&gt;&gt;&gt;tuple2
+(1,2,3)</pre>
+<p><strong>序對的運算</strong></p>
+<p>序對支援所有共同的序列運算，len()、max()、min()和sum()等內建函示均適用於序對，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;L = (1,2,3,4,5)
+&gt;&gt;&gt;len(L)
+5 #序對參數L長度為5</pre>
+<p>另外也可利用連接運算子(+)、重複運算子(*)、比較運算子<span>(&gt;、&lt;、&gt;=、&lt;=、==、!=)、in &amp; not in運算子、索引運算子([])、片段運算子([start:end])，例如:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;(1,2,3)+("Taiwan","Japan","Korea")
+(1,2,3,'Taiwan','Japan','Korea')
+&gt;&gt;&gt;
+&gt;&gt;&gt;5*(1,2,3)
+(1,2,3,1,2,3,1,2,3,1,2,3,1,2,3)
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) == (3,2,1)
+False
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) != (1,2,3,4)
+Ture
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) &lt; (1,2,3,4)
+Ture
+&gt;&gt;&gt;
+&gt;&gt;&gt;"Taiwan" in (1,"Taiwan",2)
+True
+&gt;&gt;&gt;
+&gt;&gt;&gt;"Thailand" not in (1,Taiwan,2)
+True
+&gt;&gt;&gt;
+&gt;&gt;&gt;L = (1,2,3,4,5)
+&gt;&gt;&gt;L[0]
+1
+&gt;&gt;&gt;L[1:3]
+(2,3)</pre>
+<p>序對亦支援如下方法:</p>
+<p>1.tuple.index(x):傳回參數x所指定的元素第一次出現在序對中的索引，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;T = (1,2,3,4,5,6,7,8,9,10)
+&gt;&gt;&gt;T.index(3)
+2</pre>
+<p>2.<span>tuple.count(x):傳回參數x所指定的元素第一次出現在序對中的次數，例如:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;T = (1,2,3,2,5,6,2,8,9,2)
+&gt;&gt;&gt;T.count(2)
+4</pre>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
