--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -763,8 +763,8 @@ print("5! =",result)</pre>
 <p>    4.sum(L):傳回串列參數L中元素的總和。</p>
 <p>連接運算子</p>
 <p>    1.+運算子可以用來連接串列，例如:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;[1,2,3]+["Taiwan","Japan","korea"]
-[1,2,3,'taiwan','Japan','korea']</pre>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;[1,2,3]+["Taiwan","Japan","Korea"]
+[1,2,3,'Taiwan','Japan','Korea']</pre>
 <p>重複運算子</p>
 <p>    1.*運算子也可以用來重複串列，例如:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;3*[1,2,3]
@@ -780,10 +780,10 @@ False
 </pre>
 <p>in &amp; not in運算子</p>
 <p>    1.in運算子:用來檢查某個元素是否存在於串列中，例如:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"taiwan" in [1,"taiwan",2]
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"Taiwan" in [1,"Taiwan",2]
 True</pre>
 <p>    2.not <span>in運算子:用來檢查某個元素是否不</span><span>存在於串列中，例如:</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"thailand" not in [1,taiwan,2]
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;"Thailand" not in [1,Taiwan,2]
 True</pre>
 <p>索引 &amp; 片段運算子</p>
 <p>    1.索引運算子[]:用於取得串列中的元素，舉例來說，假設變數L值為[1,2,3,4,5]，索引0表示由左端開始，索引-1則由右端開始索引，例如:</p>
@@ -809,5 +809,139 @@ True</pre>
 <p>    9.<span>list.reverse():將串列中元素順序反轉過來。</span></p>
 <p>    10.<span>list.copy():複製串列。</span></p>
 <p><span>    11.list.clear:從串列中刪除所有元素。</span></p>
+<h2><span>Day26(0210)</span></h2>
+<h3>list串列(三)</h3>
+<p>串列解析</p>
+<p>串列解析提供了更簡潔有力的方式來建立串列，利用for or if來進行串列的建立，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;list1 = [i for i in range(10) if i &lt; 8]
+&gt;&gt;&gt;list1
+[0,1,2,3,4,5,6,7]</pre>
+<p><strong>del敘述</strong></p>
+<p>del敘述可用來從串列中刪除指定索引之元素，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;L = [1,2,3,4,5,6,7]
+&gt;&gt;&gt;del L[0]
+&gt;&gt;&gt;L
+[2,3,4,5,6,7]</pre>
+<p>此外del敘述也可用來刪除變數，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt; L = [1,2,3,4,5]
+&gt;&gt;&gt; del L
+&gt;&gt;&gt; L
+Traceback (most recent call last):
+  File "&lt;pyshell#3&gt;", line 1, in &lt;module&gt;
+    L
+NameError: name 'L' is not defined</pre>
+<p><strong>二維串列</strong></p>
+<p>二維串列其實就是巢狀串列，串列中的元素也是串列，以下列成績表格為例:</p>
+<table height="84" width="401">
+<tbody>
+<tr>
+<td style="width: 93.6px;"></td>
+<td style="width: 93.6px;">math</td>
+<td style="width: 93.6px;">english</td>
+<td style="width: 94.4px;"><span>Chinese</span></td>
+</tr>
+<tr>
+<td style="width: 93.6px;">student A</td>
+<td style="width: 93.6px;">90</td>
+<td style="width: 93.6px;">80</td>
+<td style="width: 94.4px;">60</td>
+</tr>
+<tr>
+<td style="width: 93.6px;"><span>student B</span></td>
+<td style="width: 93.6px;">60</td>
+<td style="width: 93.6px;">98</td>
+<td style="width: 94.4px;">97</td>
+</tr>
+<tr>
+<td style="width: 93.6px;"><span>student C</span></td>
+<td style="width: 93.6px;">95</td>
+<td style="width: 93.6px;">75</td>
+<td style="width: 94.4px;">75</td>
+</tr>
+</tbody>
+</table>
+<p></p>
+<p>上列成績表格寫為串列:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;grades = [[90,80,60],[60,98,97],[95,75,75]]</pre>
+<p>若要存取此二維串列，必須使用兩個索引，第一個索引為列索引(row index)，第二個為行索引，如下列表格所示:</p>
+<table height="84" width="401">
+<tbody>
+<tr>
+<td style="width: 93.6px;"></td>
+<td style="width: 93.6px;">math</td>
+<td style="width: 93.6px;">english</td>
+<td style="width: 94.4px;"><span>Chinese</span></td>
+</tr>
+<tr>
+<td style="width: 93.6px;">student A</td>
+<td style="width: 93.6px;">[0][0]</td>
+<td style="width: 93.6px;">[0][1]</td>
+<td style="width: 94.4px;">[0][2]</td>
+</tr>
+<tr>
+<td style="width: 93.6px;"><span>student B</span></td>
+<td style="width: 93.6px;">[1][0]</td>
+<td style="width: 93.6px;">[1][1]</td>
+<td style="width: 94.4px;">[1][2]</td>
+</tr>
+<tr>
+<td style="width: 93.6px;"><span>student C</span></td>
+<td style="width: 93.6px;">[2][0]</td>
+<td style="width: 93.6px;">[2][1]</td>
+<td style="width: 94.4px;">[2][2]</td>
+</tr>
+</tbody>
+</table>
+<p>利用此二索引檢驗是否正確，如下:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;grades = [[90,80,60],[60,98,97],[95,75,75]]
+&gt;&gt;&gt;grades[0]
+[90,80,60]
+&gt;&gt;&gt;grades[0][0]
+90</pre>
+<h2><span>Day27(0211)</span></h2>
+<h3><span>tuple序對</span></h3>
+<p>tuple序對是由一連串資料所組成、不可改變內容(immutable)且有順序的序列(sequence)。序對中的資料以逗號隔開，前後已中括號標示，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;(1,"Taiwan",2,"Japan")
+(1,'Taiwan',2,'Japan')</pre>
+<p><strong>建立序對</strong></p>
+<p>利用Python內建的tuple()函式來建立序對，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;tuple1 = tuple()
+&gt;&gt;&gt;tuple1
+()
+&gt;&gt;&gt;tuple2 = tuple((1,2,3))
+&gt;&gt;&gt;tuple2
+(1,2,3)</pre>
+<p><strong>序對的運算</strong></p>
+<p>序對支援所有共同的序列運算，len()、max()、min()和sum()等內建函示均適用於序對，例如:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;L = (1,2,3,4,5)
+&gt;&gt;&gt;len(L)
+5 #序對參數L長度為5</pre>
+<p>另外也可利用連接運算子(+)、重複運算子(*)、比較運算子<span>(&gt;、&lt;、&gt;=、&lt;=、==、!=)、in &amp; not in運算子、索引運算子([])、片段運算子([start:end])，例如:</span></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;(1,2,3)+("Taiwan","Japan","Korea")
+(1,2,3,'Taiwan','Japan','Korea')
+&gt;&gt;&gt;
+&gt;&gt;&gt;5*(1,2,3)
+(1,2,3,1,2,3,1,2,3,1,2,3,1,2,3)
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) == (3,2,1)
+False
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) != (1,2,3,4)
+Ture
+&gt;&gt;&gt;
+&gt;&gt;&gt;(1,2,3) &lt; (1,2,3,4)
+Ture
+&gt;&gt;&gt;
+&gt;&gt;&gt;"Taiwan" in (1,"Taiwan",2)
+True
+&gt;&gt;&gt;
+&gt;&gt;&gt;"Thailand" not in (1,Taiwan,2)
+True
+&gt;&gt;&gt;
+&gt;&gt;&gt;L = (1,2,3,4,5)
+&gt;&gt;&gt;L[0]
+1
+&gt;&gt;&gt;L[1:3]
+(2,3)</pre>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
