--- a/content/Day28(0212).html
+++ b/content/Day28(0212).html
@@ -133,16 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">in ,not in運算子 << <a href='in ,not in運算子.html'>Previous</a> <a href='Day12(0127).html'>Next</a> >> Day12(0127)<br /><h1>索引運算子[]與片段運算子</h1>
-<p>利用索引運算子[]可以取得字串中的字元，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
-&gt;&gt;&gt;s[3]
-h</pre>
-<p>也可使用片段運算子來指定範圍索引，如下。</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;s = "Python程式設計"
-&gt;&gt;&gt;s[2:4] #不包含第四字元(只索引2~3字元)
-th</pre>
-<br />in ,not in運算子 << <a href='in ,not in運算子.html'>Previous</a> <a href='Day12(0127).html'>Next</a> >> Day12(0127)</div>
+    <div id="tipue_search_content">tuple序對 << <a href='tuple序對.html'>Previous</a> <a href='set集合(一).html'>Next</a> >> set集合(一)<br /><h1>Day28(0212)</h1>
+<br />tuple序對 << <a href='tuple序對.html'>Previous</a> <a href='set集合(一).html'>Next</a> >> set集合(一)</div>
         
     <!-- footer -->
       <div class="container">
