Day29(0213) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -995,5 +995,25 @@ True</pre>
 <p><span>    4.S1 &lt; S2:<span>若S1是S2的真子集合(proper subset)，將傳回True，</span><span>否則傳回False。</span></span></p>
 <p><span>    5.S1 &gt;= S2:<span>若S1是S2的超集合(superset)，將傳回True，</span><span>否則傳回False。</span></span></p>
 <p><span>    6.S1 &gt; S2:<span>若S1是S2的真超集合(proper superset)，將傳回True，</span><span>否則傳回False。</span></span></p>
+<h1><span><span>W5</span></span></h1>
+<h2><span><span>Day29(0213)</span></span></h2>
+<h3><span>set集合(二)</span></h3>
+<p><strong>集合處理方法</strong></p>
+<p><span>集合隸屬於set類別，常用之處理方式如下:</span></p>
+<p><strong>新增/刪除/複製</strong></p>
+<p>    1.set.add(x):將參數x指定之元素加入集合。</p>
+<p>    2.set.remove(x):從集合中刪除x所指定之元素。</p>
+<p>    3.set.pop():從集合中隨機刪除一個元素，並傳回該元素。</p>
+<p>    4.set.copy():傳回集合的複本，和原來的集合為兩個不同的物件。</p>
+<p>    5.set.clear():刪除集合中的所有元素。</p>
+<p><strong>子集合/超集合</strong></p>
+<p><b>    </b>1.set.issubset(S):若集合為參數S的子集合，<span>將傳回True，</span><span>否則傳回False。</span></p>
+<p>    2.<span>set.issuperset(S):若集合為參數S的超集合，<span>將傳回True，</span><span>否則傳回False。</span></span></p>
+<p><strong>常用集合運算</strong></p>
+<p><strong><span>   </span></strong> 1.set.isdisjoint(S):<span>若集合和參數S所指定的集合沒有相同的元素，</span><span>將傳回True，</span><span>否則傳回False。</span></p>
+<p>    2.<span>set.update(S):將</span><span>集合和參數S所指定的集合進行聯集，結果將更新到集合。</span></p>
+<p>    3.<span>set.intersection_update(S):將</span><span>集合和參數S所指定的集合進行交集，結果將更新到集合。</span></p>
+<p>    4.<span>set.difference_update(S):將</span><span>集合和參數S所指定的集合進行差集，結果將更新到集合。</span></p>
+<p></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
